2001-12-18  James Henstridge  <james@daa.com.au>

	* gobjectmodule.c (pyg_value_from_pyobject): add support for
	int64/uint64.  Fix up code for unsigned int/long to parse long
	ints if necessary.
	(pyg_value_as_pyobject): add support for int64/uint64, and get
	UINT/ULONG to return python long ints if necessary, rather than
	wrapping around.

	* Makefile.am (EXTRA_DIST): add new example to dist.

	* examples/gobject/properties.py: test program that implements a
	few properties.

	* gobjectmodule.c (add_properties): new function for parsing the
	__gproperties__ class attribute.
	(create_property): helper routine for creating and installing the
	new pspecs.
	(pyg_type_register): add code to call add_properties if a
	__gproperties__ attribute is found.
	(pyg_object_class_init): set set_property/get_property methods in
	vtable, and get rid of debug message.
	(initgobject): add G_PARAM_* constants.

2001-12-17  James Henstridge  <james@daa.com.au>

	* gobjectmodule.c (pygobject_chain_from_overridden): add chaining
	function.  This will need to change when Tim makes the changes to
	the chaining API.  This was just to test that things worked
	correctly (and they do).  Possibly this should be renamed to just
	GObject.chain() or GObject._chain().

2001-12-15  James Henstridge  <james@daa.com.au>

	* gobjectmodule.c (add_signals): put the class ref/unref in here,
	so it is only done once.  The ref/unref is really needed for
	adding signals as well, so that we don't end up with dups.

2001-12-14  Johan Dahlin  <jdahlin@telia.com>

	* gobjectmodule.c (initgobject): Add gobject.glib_version.

	* configure.in (PYGTK_MINOR_VERSION): Add and define
	PYGTK_[MAJOR,MINOR,MACRO]_VERSION. Also add *_REQUIRED_VERSION 
	for dependencies.

	* gtk/gtkmodule.c (init_gtk): remove gtk_major_version,
	gtk_minor_version and gtk_macro_version and replace them with
	gtk_version,
	Add pygtk_version.

2001-12-14  James Henstridge  <james@daa.com.au>
