@@ -1,3 +1,14 @@
+2001-12-19  James Henstridge  <james@daa.com.au>
+
+	* codegen/docgen.py (DocWriter.output_object_docs): fix for
+	changes to the way parent types are listed in the defs format.
+	(DocWriter.create_method_prototype): of_object is only a string
+	now -- not a 2-tuple.
+	(DocbookDocWriter.make_method_ref): same here.
+	(DocbookDocWriter.__format_function): and here ...
+	(DocbookDocWriter.__format_symbol): and here :)
+	(DocbookDocWriter.write_method): again here.
+
 2001-12-18  James Henstridge  <james@daa.com.au>
 
 	* gobjectmodule.c (pyg_value_from_pyobject): add support for
